# KingchatHarmony

./: .gitignore  build-profile-home.json5  build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/: module.json5
entry/src/main/cpp/: Broadcaster.cpp  Broadcaster.h  CMakeLists.txt  MediaStreamTrackFactory.cpp  MediaStreamTrackFactory.h  napi_init.cpp
entry/src/main/cpp/client/: conductor.cc  conductor.h  defaults.cc  peer_connection_client.cc
entry/src/main/cpp/client/ohos/: main_wnd.cc  main_wnd.h  peer_sample.cc  peer_sample.h
entry/src/main/cpp/common/: log_common.h
entry/src/main/cpp/plugin/: plugin_manager.cpp  plugin_manager.h
entry/src/main/cpp/samples/: sample_bitmap.cpp  sample_bitmap.h
entry/src/main/cpp/types/libentry/: index.d.ts
entry/src/main/cpp/utils/: utilCallJs.cpp  utilCallJs.h
entry/src/main/cpp/webRTC_adapter/: ohos_camera.cpp  ohos_camera_capture.cpp  ohos_camera_capture.h  ohos_capturer_track_source.cpp  ohos_codec_data.cpp  ohos_codec_data.h  ohos_video_common.h  ohos_video_encoder.h
entry/src/main/ets/client/ohos/: peer_sample.cc
entry/src/main/ets/interface/: XComponentContext.ts
entry/src/main/ets/kingchat/: roomClient.ts
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/protooClient/: Message.ts  Peer.ts
entry/src/main/ets/protooClient/transports/: WebSocketTransport.ts
entry/src/main/ets/utils/: Logger.ts  define.ts
entry/src/main/ets/webRTC_adapter/: ohos_camera.h  ohos_capturer_track_source.h  ohos_common.h  ohos_video_encoder.cpp
entry/src/main/resources/base/element/: string.json
hvigor/: hvigor-config.json5
